--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -3,3 +3,84 @@
 @use './partials/reset' as *;
 @use './partials/globals' as *;
 @use './partials/fontface' as *;
+
+/* ###  header/navigation   ### */
+
+.topbar {
+    background-color: $primary-color-main;
+
+    &__container {
+        @extend .flex-container;
+
+        @include tablet-responsive {
+            padding: 0 $size-increment-x5-1;
+            justify-content: flex-start;
+            flex-wrap: nowrap;
+            gap: $size-increment-x8;
+        }
+    }
+
+    &__back-to-home {
+        padding-top: $size-increment-x3;
+        margin-bottom: $size-increment-x2;
+
+        @include align-text(center);
+
+        @include tablet-responsive {
+            padding: 0;
+            margin: 0;
+        }    
+    }
+
+    &__back-to-home,
+    &__navigation,
+    &__items {
+        flex: 0 0 100%;
+
+        @include tablet-responsive {
+            flex: 0 0 auto;
+        }
+    }
+
+    &__items {
+        list-style: none;
+        align-items: flex-start;
+        @extend .flex-container;
+
+        @include tablet-responsive {
+            gap: $size-increment-x5;
+        }
+    }
+
+    &__item,
+    &__link {
+        transition: all .2s;
+    }
+
+    &__item {
+        flex: 0 0 50%;
+        padding: 0 $size-increment-x3 $size-increment-x2;
+        font-weight: $font-weight-demi;
+
+        &:hover,
+        &--active {
+            border-bottom: $size-increment-x1 solid $primary-color-subsidiary;
+            cursor: pointer;
+        }
+        &:hover > a,
+        &--active > a {
+            color: $primary-color-subsidiary;
+        }
+
+        @include align-text(center);
+
+        @include tablet-responsive {
+            padding: $size-increment-x4 0;
+            flex: 0 0 auto;
+        }
+    }
+
+    &__link {
+        color: $primary-color-alternate;
+    }
+}
