--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -10,7 +10,7 @@
     background-color: $primary-color-main;
 
     &__container {
-        @extend .flex-container;
+        @extend .container;
 
         @include tablet-responsive {
             padding: 0 $size-increment-x5-1;
@@ -43,9 +43,10 @@
     }
 
     &__items {
+        @extend .container;
+        
         list-style: none;
         align-items: flex-start;
-        @extend .flex-container;
 
         @include tablet-responsive {
             gap: $size-increment-x5;
@@ -82,5 +83,131 @@
 
     &__link {
         color: $primary-color-alternate;
+    }
+}
+
+/* ###  footer/contact   ### */
+
+.contact {
+    background-color: $primary-color-main;
+    padding: $size-increment-x5 0 $size-increment-x4;
+
+    @include tablet-responsive {
+        padding: $size-increment-x8 0;
+    }
+
+    &__container {
+        @extend .container;
+
+        padding: 0 $size-increment-x3;
+        justify-content: flex-start;
+
+        @include tablet-responsive {
+            padding: 0 $size-increment-x5-1;
+        }
+    }
+
+    &__title {
+        @include flex-item-realestate(1, 0, 100%);
+        
+        font-weight: $font-weight-demi;
+
+        @include tablet-responsive {
+            font-size: $size-increment-x6;
+            order: -1;
+            @include flex-item-realestate(1, 1, 30%);
+        }
+
+        @include desktop-responsive {
+            @include flex-item-realestate(0, 1, 30%);
+        }
+    }
+
+    &__social {
+        @include flex-item-realestate(1, 0, 100%);
+        display: flex;
+        gap: $size-increment-x5;
+
+        @include tablet-responsive {
+            order: -1;
+            @include flex-item-realestate(1, 1, 30%);
+        }
+
+        @include desktop-responsive {
+            @include flex-item-realestate(0, 1, 30%);
+        }
+    }
+
+    &__icon {
+        @include tablet-responsive {
+            width: 30px;
+        }
+        &--facebook {
+            @include tablet-responsive {
+                width: 18px;
+            }
+        }
+        &--twitter {
+            @include tablet-responsive {
+                width: 35px;
+            }
+        }
+    }
+
+    &__title,
+    &__social,
+    &__point {
+        margin-bottom: $size-increment-x4;
+        @include tablet-responsive {
+            margin-bottom: 0;
+        }
+    }
+
+    &__point {
+        @include flex-item-realestate(1, 0, 100%);
+        
+        @include tablet-responsive {
+            @include flex-item-realestate(1, 0, 30%);
+            margin: $size-increment-x7 0;
+        }
+        @include desktop-responsive {
+            @include flex-item-realestate(0, 1, 30%);
+        }
+    }
+
+    &__person,
+    &__location {
+        margin-bottom: $size-increment-x3;
+    }
+
+    &__name,
+    &__company {
+        font-weight: $font-weight-bold;
+    }
+
+    &__title,
+    &__copyright {
+        color: $primary-color-subsidiary;
+    }
+
+    &__back-to-home {
+        display: block;
+        padding: $size-increment-x5 0 $size-increment-x2;
+
+        @include tablet-responsive {
+            @include flex-item-realestate(1, 1, 30%);
+
+            padding: 0;
+            order: -1;
+            text-align: right;
+        }
+        @include desktop-responsive {
+            @include flex-item-realestate(1, 0, 40%);
+        }
+
+    }
+    &__copyright {
+        @include flex-item-realestate(1, 0, 100%);
+        font-size: 12px;
     }
 }
