--- a/styles/bio.css
+++ b/styles/bio.css
@@ -84,7 +84,7 @@ span {
   max-width: 120px;
 }
 
-.container, .topbar__container, .topbar__items, .contact__container {
+.container, .topbar__container, .topbar__items, .hero__container, .contact__container {
   max-width: 1044px;
   margin: 0 auto;
   display: flex;
@@ -158,6 +158,46 @@ span {
 }
 .topbar__link {
   color: #AFAFAF;
+}
+
+/* ###  footer/contact   ### */
+.hero {
+  background: url("../assets/images/hero-bio.jpg") center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 30vh;
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    height: 60vh;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero {
+    height: 80vh;
+  }
+}
+.hero__overlay {
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.hero__container {
+  padding: 0 1rem;
+  height: 100%;
+  justify-content: flex-start;
+}
+@media screen and (min-width: 768px) {
+  .hero__container {
+    padding: 0 2.25rem;
+  }
+}
+.hero__title {
+  color: #FFFFFF;
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    font-size: 3.5rem;
+  }
 }
 
 /* ###  footer/contact   ### */
